try to fix the issue with address and menu bar messing with 100vh on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -4,7 +4,8 @@
 html,
 body,
 #root {
-    height: 100vh;
+    min-height: 100vh;
+    min-height: -webkit-fill-available;
 }
 
 * {
